feat: add recommendation holdout experiment